--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,11 @@
     margin: 0;
     padding: 0;
 }
+
+.card-item{
+    margin: 0 auto;
+    height: 50vh;
+    background-color: rebeccapurple;
+    width: 50vw;
+    border-radius: 5px;
+}
